--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -15,30 +15,24 @@ jobs:
         with:
           fetch-depth: 0
 
-      # 👇 修改: 使用 setup-node 来安装 Node.js 和 pnpm
-      - name: 🛠️ Setup Node.js & pnpm 环境
+      - name: 🛠️ Setup Node.js 环境 (使用 npm 缓存)
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'pnpm'
-          # 告诉 setup-node 自动安装 pnpm
-          cache-dependency-path: pnpm-lock.yaml # 假设你使用了 pnpm-lock.yaml
+          # 🚨 关键修改: 将缓存改为 npm
+          cache: 'npm'
 
-      # 👇 新增: 使用 pnpm action setup 来确保 pnpm 可用
-      - name: 📥 Ensure pnpm is available
-        uses: pnpm/action-setup@v3
-        with:
-          version: 8 # 推荐安装 pnpm 8 版本
-          run_install: false # 不在这里运行 install
+      # 🚨 移除所有 pnpm/action-setup 相关的步骤!
 
-      - name: 📦 安装依赖
-        # 现在 pnpm 应该可以找到了
-        run: pnpm install --frozen-lockfile
+      - name: 📦 安装依赖 (使用 npm)
+        # 🚨 关键修改: 使用 npm install 代替 pnpm install
+        run: npm install
 
-      - name: 🏗️ 构建 VitePress 文档
-        run: pnpm run docs:build
+      - name: 🏗️ 构建 VitePress 文档 (使用 npm run)
+        # 🚨 关键修改: 使用 npm run docs:build
+        run: npm run docs:build
 
-      # === 部署步骤 ===
+      # === 部署步骤保持不变 ===
       - name: 🚀 部署到 GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
