--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -15,22 +15,26 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: 🛠️ Setup Node.js 环境 (使用 npm 缓存)
+      # 1. 🛠️ 设置 Node.js 环境 (不安装 pnpm，只设置缓存)
+      - name: Setup Node.js Environment
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          # 🚨 关键修改: 将缓存改为 npm
-          cache: 'npm'
+          cache: 'pnpm' # 启用 pnpm 缓存
 
-      # 🚨 移除所有 pnpm/action-setup 相关的步骤!
+      # 2. 📥 关键步骤: 明确安装 pnpm (这是解决找不到问题的核心)
+      - name: Install pnpm
+        uses: pnpm/action-setup@v3
+        with:
+          version: 8 # 指定一个稳定的 pnpm 版本
+          run_install: false # 只是安装 pnpm 工具，不运行 install
 
-      - name: 📦 安装依赖 (使用 npm)
-        # 🚨 关键修改: 使用 npm install 代替 pnpm install
-        run: npm install
+      - name: 📦 安装依赖 (使用 pnpm)
+        # 现在 pnpm 路径已设置好，可以运行 install
+        run: pnpm install --frozen-lockfile
 
-      - name: 🏗️ 构建 VitePress 文档 (使用 npm run)
-        # 🚨 关键修改: 使用 npm run docs:build
-        run: npm run docs:build
+      - name: 🏗️ 构建 VitePress 文档
+        run: pnpm run docs:build
 
       # === 部署步骤保持不变 ===
       - name: 🚀 部署到 GitHub Pages
