fix: Final fix for pnpm setup by separating cache and installation logic

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -15,19 +15,21 @@ jobs:
         with:
           fetch-depth: 0
 
-      # 1. 🛠️ 设置 Node.js 环境 (不安装 pnpm，只设置缓存)
+      # 1. 🛠️ 仅设置 Node.js 环境 (不配置 pnpm 缓存，让 pnpm/action-setup 独立负责 pnpm)
       - name: Setup Node.js Environment
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'pnpm' # 启用 pnpm 缓存
+          # 🚨 关键修改: 移除 cache: 'pnpm' 这一行，避免 setup-node 尝试查找 pnpm。
 
-      # 2. 📥 关键步骤: 明确安装 pnpm (这是解决找不到问题的核心)
-      - name: Install pnpm
+      # 2. 📥 关键步骤: 使用官方 Action 明确安装 pnpm (并设置缓存)
+      - name: Install and Setup pnpm
         uses: pnpm/action-setup@v3
         with:
           version: 8 # 指定一个稳定的 pnpm 版本
-          run_install: false # 只是安装 pnpm 工具，不运行 install
+          run_install: false
+          # 🚨 新增: 明确启用 pnpm 缓存 (cache: true)
+          cache: true
 
       - name: 📦 安装依赖 (使用 pnpm)
         # 现在 pnpm 路径已设置好，可以运行 install
