--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -19,19 +19,25 @@ jobs:
         with:
           fetch-depth: 0
 
-      # 1. 📥 安装 pnpm
+      # 1. 🛠️ 设置 Node.js 环境
+      - name: Setup Node.js Environment
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          # 保持不配置 cache，让 pnpm/action-setup 负责缓存
+
+      # 2. 🚨 关键修复：设置 NPM 镜像源，解决 500 错误
+      - name: 🌐 设置 NPM 镜像源
+        run: npm config set registry https://registry.npmmirror.com/
+        # 使用 registry.npmmirror.com (新的淘宝镜像地址) 来绕过官方 registry 的 500 错误。
+
+      # 3. 📥 安装 pnpm (这次会从镜像源下载)
       - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
           version: 8
           run_install: false
-
-      # 2. 🛠️ 设置 Node.js 环境并启用 pnpm 缓存
-      - name: Setup Node.js Environment
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: 'pnpm' # 启用 pnpm 依赖缓存，加速后续构建
+          cache: true # 启用 pnpm 依赖缓存
 
       - name: 📦 安装依赖
         run: pnpm install --frozen-lockfile
@@ -39,7 +45,7 @@ jobs:
       - name: 🏗️ 构建 VitePress 文档
         run: pnpm run docs:build
 
-      # 3. 🚀 部署到 GitHub Pages
+      # 4. 🚀 部署到 GitHub Pages
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
